chaning and updating namespaces

--- a/Chiropractic/Web.Debug.config
+++ b/Chiropractic/Web.Debug.config
@@ -30,7 +30,7 @@
     <add key="TangoEndpoint" value="https://sandbox.tangocard.com/raas/v1" />
   </appSettings>
   <connectionStrings xdt:Transform="Replace">
-    <add name="myConnectionString" connectionString="integrated security=sspi;data source=(local);initial catalog=V3Chiro;" />
+    <add name="myConnectionString" connectionString="integrated security=sspi;data source=(local);initial catalog=EducationGame;" />
   </connectionStrings>
   <system.web>
     <!--
