--- a/TestLibrary/TestLibrary.csproj
+++ b/TestLibrary/TestLibrary.csproj
@@ -77,7 +77,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorbetteDataBuilder.cs" />
     <Compile Include="DisclaimerBuilder.cs" />
     <Compile Include="DomainLayer\DailyTokens\DailyTokenUpdaterFixture.cs" />
     <Compile Include="MessageTests.cs" />
@@ -115,9 +114,7 @@
       <Name>WePaySDK</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CorebetteData\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
